--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,14 @@ DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_PASSWORD=change-me-now
 DJANGO_SUPERUSER_FIRST_NAME=
 DJANGO_SUPERUSER_LAST_NAME=
+DEFAULT_FILE_STORAGE=django.core.files.storage.FileSystemStorage
+MEDIA_URL=/media/
+MEDIA_ROOT=motofinai/media
+USE_WHITENOISE=true
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_STORAGE_BUCKET_NAME=
+AWS_S3_REGION_NAME=
+AWS_S3_ENDPOINT_URL=
+AWS_S3_CUSTOM_DOMAIN=
+AWS_QUERYSTRING_AUTH=false
