--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ django-tailwind==4.3.1
 python-dotenv==1.2.1
 whitenoise==6.11.0
 cookiecutter==2.6.0
+django-storages[boto3]==1.14.2
+Pillow==11.0.0
