feat: Implement breadcrumb navigation across multiple pages
- Added breadcrumb component to enhance navigation in:
  - Motor Detail
  - Loan Application Detail
  - Loan Application Documents
  - Loan Application List
  - Repossession Case Detail
  - Repossession Case List
- Improved user experience by providing clear navigation paths.

feat: Enhance Loan Application List with search and export functionality

- Implemented search functionality for loan applications.
- Added CSV export feature for loan applications.
- Introduced sorting capabilities for table columns.

fix: Update page titles to reflect new branding

- Changed page titles from "MotofinAI" to "DC Financing Corporation" across various templates.

feat: Add responsive design improvements for tables

- Enhanced responsiveness of tables in Finance and Loan Officer dashboards.
- Implemented mobile card views for better usability on smaller screens.

chore: Update environment configuration for deployment

- Created a new .env.render.example file for Render deployment.
- Updated render.yaml for service configuration on Render platform.

docs: Add deployment setup documentation for Render

- Created render_setup.md with detailed steps for deploying the application on Render.
- Included environment variable setup, build commands, and database migration instructions.

feat: Implement loan application CSV export utility

- Created export_loan_applications_csv function to facilitate CSV downloads of loan applications.
- Ensured that exported data includes relevant fields and respects search filters.

chore: Update URL and WSGI configurations for new branding

- Modified URLs and WSGI configurations to reflect the new project name "DC Financing Corporation".

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,18 @@
-DJANGO_SECRET_KEY=change-me
+DJANGO_SECRET_KEY=mahilig-ako-sa-lumpiang-toge
 DJANGO_DEBUG=true
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
-DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost:8000
-DB_ENGINE=django.db.backends.mysql
-DB_NAME=motofinai
-DB_USER=motofinai
-DB_PASSWORD=motofinai
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,your-service.onrender.com
+DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost:8000,https://your-service.onrender.com
+
+# Postgres (default)
+DB_ENGINE=django.db.backends.postgresql
+DB_NAME=dc_financing_corporation_financing
+DB_USER=dc_financing_corporation_financing_user
+DB_PASSWORD=5yxZnmEqEQOY4gzqKLi911zPGqcriHBL
+DB_HOST=dpg-d4jr1l4hg0os73a9sj70-a.oregon-postgres.render.com
+DB_PORT=5432
+DB_CONN_MAX_AGE=60
+# Alternatively set DATABASE_URL=postgresql://dc_financing_corporation_financing_user:5yxZnmEqEQOY4gzqKLi911zPGqcriHBL@dpg-d4jr1l4hg0os73a9sj70-a.oregon-postgres.render.com/dc_financing_corporation_financing
+
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_PASSWORD=change-me-now
